app/assets/stylesheets/humon/detail.css.scss
@import "app_base";
.node.active > span.node-detail {
  visibility: visible;
}
.node:hover > span.node-detail {
  visibility: visible;
}

.node {
  .node-text {
    height: $lineheight;
    vertical-align: bottom;
    display: inline-block;
  }
}

span.node-detail  {
  @extend .node-text;
  font-style: italic;
  visibility: hidden;
  position: relative;
  display: inline-block;
}

span.node-detail.node-icon {
  $nodeIconHeight: 14px;
  height: $nodeIconHeight;
  width: 10px;
  font-size: $nodeIconHeight;
  position: relative;
  top: $lineheight - $nodeIconHeight;

  i.icon {
    height: 10px;
    top: 0%;
    position: absolute;
    left: 0px ;// -12px;
  }
}

.node-detail.class-name {
  color: $grayLighter;
  float: right;
}

